# giada

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  CMakeLists.txt.bb  CMakePresets.json  ChangeLog  Makefile.am  README  README.md  Taskfile.yml  appveyor.yml  autogen.sh  configure  configure.ac  create_source_tarball.sh  set_github_token  vcpkg-configuration.json  vcpkg.json
src/: Makefile.am  aliases.h  channel.cpp  channel.h  conf.cpp  conf.h  const.h  dataStorage.cpp  dataStorage.h  gd_about.cpp  gd_about.h  gd_actionEditor.cpp  gd_actionEditor.h  gd_beatsInput.cpp  gd_beatsInput.h  gd_bpmInput.cpp  gd_bpmInput.h  gd_browser.cpp  gd_browser.h  gd_config.cpp  gd_config.h  gd_devInfo.cpp  gd_devInfo.h  gd_editor.cpp  gd_editor.h  gd_keyGrabber.cpp  gd_keyGrabber.h  gd_mainWindow.cpp  gd_mainWindow.h  gd_midiGrabber.cpp  gd_midiGrabber.h  gd_midiInput.cpp  gd_midiInput.h  gd_midiInputSetup.cpp  gd_midiInputSetup.h  gd_midiOutput.cpp  gd_midiOutput.h  gd_midiOutputSetup.cpp  gd_midiOutputSetup.h  gd_midiSetup.cpp  (+90 more)
src/core/: IOEngine.cpp  IOEngine.h  action.h  actionEditorEngine.cpp  actionEditorEngine.h  audioBuffer.cpp  audioBuffer.h  channel.cpp  channel.h  channelManager.cpp  channelManager.h  channelsEngine.cpp  channelsEngine.h  clock.cpp  clock.h  conf.cpp  conf.h  confFactory.cpp  confFactory.h  conf_DEPR_.cpp  conf_DEPR_.h  const.h  dataStorage.cpp  dataStorage.h  dataStorageIni.cpp  dataStorageIni.h  dataStorageJson.cpp  dataStorageJson.h  deepPtr.h  engine.cpp  engine.h  eventDispatcher.cpp  eventDispatcher.h  graphics.cpp  graphics.h  idManager.cpp  idManager.h  init.cpp  init.h  jackSynchronizer.cpp  (+113 more)
src/core/actions/: ActionManager.cpp  ActionManager.h  action.h  actionFactory.cpp  actionFactory.h  actionRecorder.cpp  actionRecorder.h  actions.cpp  actions.h
src/core/api/: IOApi.cpp  IOApi.h  actionEditorApi.cpp  actionEditorApi.h  channelsApi.cpp  channelsApi.h  configApi.cpp  configApi.h  mainApi.cpp  mainApi.h  pluginsApi.cpp  pluginsApi.h  sampleEditorApi.cpp  sampleEditorApi.h  storageApi.cpp  storageApi.h
src/core/channels/: audioReceiver.cpp  audioReceiver.h  channel.cpp  channel.h  channelFactory.cpp  channelFactory.h  channelManager.cpp  channelManager.h  channelShared.cpp  channelShared.h  groupChannel.cpp  groupChannel.h  masterChannel.cpp  masterChannel.h  midiActionRecorder.cpp  midiActionRecorder.h  midiChannel.cpp  midiChannel.h  midiChannelProc.cpp  midiChannelProc.h  midiController.cpp  midiController.h  midiInput.cpp  midiInput.h  midiLearn.cpp  midiLearn.h  midiLearner.cpp  midiLearner.h  midiLighter.cpp  midiLighter.h  midiLightning.cpp  midiLightning.h  midiReceiver.cpp  midiReceiver.h  midiSender.cpp  midiSender.h  sampleActionRecorder.cpp  sampleActionRecorder.h  sampleAdvancer.cpp  sampleAdvancer.h  (+16 more)
src/core/model/: actions.cpp  actions.h  behaviors.h  channels.cpp  channels.h  data.cpp  data.h  dataLock.cpp  dataLock.h  document.cpp  document.h  kernelAudio.cpp  kernelAudio.h  kernelMidi.h  loadState.cpp  loadState.h  midiIn.cpp  midiIn.h  mixer.cpp  mixer.h  model.cpp  model.h  recorder.cpp  recorder.h  sequencer.cpp  sequencer.h  shared.cpp  shared.h  sharedLock.cpp  sharedLock.h  storage.cpp  storage.h  track.cpp  track.h  tracks.cpp  tracks.h  traits.h  types.h
src/core/plugins/: plugin.cpp  plugin.h  pluginAudioPlayHead.cpp  pluginAudioPlayHead.h  pluginFactory.cpp  pluginFactory.h  pluginHost.cpp  pluginHost.h  pluginManager.cpp  pluginManager.h  pluginParameter.cpp  pluginParameter.h  pluginState.cpp  pluginState.h
src/core/recorder/: recorder.cpp  recorder.h  recorderStack.cpp  recorderStack.h
src/core/rendering/: midiAdvance.cpp  midiAdvance.h  midiChannel.cpp  midiChannel.h  midiOutput.cpp  midiOutput.h  midiReactions.cpp  midiReactions.h  midiRendering.cpp  midiRendering.h  pluginRendering.cpp  pluginRendering.h  reactor.cpp  reactor.h  renderer.cpp  renderer.h  sampleAdvance.cpp  sampleAdvance.h  sampleReactions.cpp  sampleReactions.h  sampleRendering.cpp  sampleRendering.h
src/ext/: resource.h
src/glue/: actionEditor.cpp  actionEditor.h  browser.cpp  browser.h  channel.cpp  channel.h  config.cpp  config.h  events.cpp  events.h  glue.cpp  glue.h  io.cpp  io.h  layout.cpp  layout.h  main.cpp  main.h  mixer.cpp  mixer.h  plugin.cpp  plugin.h  recorder.cpp  recorder.h  sampleEditor.cpp  sampleEditor.h  storage.cpp  storage.h  transport.cpp  transport.h
src/gui/: const.h  dispatcher.cpp  dispatcher.h  drawing.cpp  drawing.h  graphics.h  keyDispatcher.cpp  keyDispatcher.h  langMapper.cpp  langMapper.h  model.cpp  model.h  storager.cpp  storager.h  types.h  ui.cpp  ui.h  updater.cpp  updater.h
src/gui/dialogs/: about.cpp  about.h  beatsInput.cpp  beatsInput.h  bpmInput.cpp  bpmInput.h  channelNameInput.cpp  channelNameInput.h  channelRouting.cpp  channelRouting.h  config.cpp  config.h  devInfo.cpp  devInfo.h  gd_about.cpp  gd_about.h  gd_actionEditor.cpp  gd_actionEditor.h  gd_beatsInput.cpp  gd_beatsInput.h  gd_bpmInput.cpp  gd_bpmInput.h  gd_browser.cpp  gd_browser.h  gd_config.cpp  gd_config.h  gd_devInfo.cpp  gd_devInfo.h  gd_editor.cpp  gd_editor.h  gd_keyGrabber.cpp  gd_keyGrabber.h  gd_mainWindow.cpp  gd_mainWindow.h  gd_midiInput.cpp  gd_midiInput.h  gd_midiOutput.cpp  gd_midiOutput.h  gd_pluginChooser.cpp  gd_pluginChooser.h  (+35 more)
src/gui/elems/: actionEditor.cpp  actionEditor.h  baseActionEditor.cpp  baseActionEditor.h  browser.cpp  browser.h  channel.cpp  channel.h  (+75 more)
src/rtaudio/: Makefile.in  RtAudio.cpp  RtAudio.h  configure  configure.ac  install  librtaudio.pc  librtaudio.pc.in  librtaudio.so.4.0.12  readme  rtaudio-4.1.1-giada.patch  rtaudio-config  rtaudio-config.in
src/rtaudio-mod/: Makefile.in  RtAudio.cpp  RtAudio.h  configure  rtaudio-config.in
src/utils/: cocoa.h  cocoa.mm  container.h  deps.cpp  deps.h  fs.cpp  fs.h  gui.cpp  gui.h  gui_utils.cpp  gui_utils.h  gvector.h  json.cpp  json.h  log.cpp  log.h  math.cpp  math.h  string.cpp  string.h  time.cpp  time.h  utils.cpp  utils.h  vector.h  ver.cpp  ver.h
src/vst/: aeffect.h  vstfxstore.h
(+310 files in other folders)
